utils/local_deploy/08_install_pb_services/rpc-proxy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rpc-proxy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rpc-proxy
  template:
    metadata:
      labels:
        app: rpc-proxy
    spec:
      containers:
        - name: rpc-proxy
          image: maxkondr/rpc-proxy
          ports:
          - name: http
            containerPort: 7000
