utils/local_deploy/08_install_pb_services/rpc-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rpc-proxy
  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 7000
    targetPort: 7000
    protocol: TCP
  selector:
    app: rpc-proxy
