utils/local_deploy/08_install_pb_services/rpc-proxy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/upstream-vhost: rpc-proxy.default.svc.cluster.local
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: rpc-proxy
  namespace: default
spec:
  tls:
  - hosts:
    - "yakut-laptop"
    secretName: rpc-proxy-secret
  rules:
  - host: "yakut-laptop"
    http:
      paths:
      - path: /rpc-proxy
        backend:
          serviceName: rpc-proxy
          servicePort: http
